fixed attachments alignmnet

--- a/src/components/layout/dashboard/dashboard.module.css
+++ b/src/components/layout/dashboard/dashboard.module.css
@@ -164,3 +164,15 @@ input[type="file"] {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.modalButtons{
+    width: 70%;
+    margin-left: 15%;
+    padding: 8px 20px;
+    font-size: large;
+    border: 1px #253E7E solid;
+    background-color: #253E7E;
+    color: white;
+    border-radius: 8px;
+    margin-bottom: 3px;
+
+}
